# NeuroLogistics-Intelligent-Route-Optimization-System

./: LICENSE  README.md  app.py  generate_synthetic_data.py  pyproject.toml  requirements.txt  synthetic_traffic_data.csv  train_model.py  vercel.json
.github/: copilot-instructions.md
templates/: index.html
