[tool.poetry]
name = "NeuroLogistics"
version = "0.1.0"
description = "Logistics Assistance System"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "3.12"
flask = "^2.0.1"
requests = "^2.25.1"
joblib = "^1.0.1"
pandas = "^1.2.5"
scikit-learn = "^0.24.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"