[tool.poetry]
name = "neuro_logistics"
version = "0.1.0"
description = "Neuro Logistics Route Optimization System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"  # Set the Python version to 3.12 or the one you're using

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"